--- a/templates/taxonomy/term_change_form.html
+++ b/templates/taxonomy/term_change_form.html
@@ -1,6 +1,6 @@
 {% extends "admin/change_form.html" %}
 {% block form_top %}
-<div class="aligned form-row field-tree_id">
+<div class="aligned form-row field-taxonomy_term">
         <div style="text-align:center; padding-top: 4px; font-size: 18px; font-style:italic;">
             {{ tree_name }}
         </div>
