--- a/templates/taxonomy/term_change_form.html
+++ b/templates/taxonomy/term_change_form.html
@@ -2,7 +2,7 @@
 {% block form_top %}
 <div class="aligned form-row field-taxonomy_term">
         <div style="text-align:center; padding-top: 4px; font-size: 18px; font-style:italic;">
-            {{ tree_name }}
+            Tree of {{ opts.verbose_name_plural }}
         </div>
 </div>
 {% endblock %}
